+ features
* bugfixes
============== 1.0.0-dev (unreleased) ==============
 + Hand-drawn maps can now be scaled with slider
 + Show check mark for completed scenarios, challenges and trainings
 + New chat command: “/help room” (shows room chat commands within the game)
 + Colorize switching arrows, pointing arrow and target cross in clan color
 + Longer delays between turns so its easier to see damage and messages
 + Skip ammo menu animation when playing with turn time of 10s or less
 + Restructure credits
 + Credits screen in main menu is now translatable
 + Don't show crate spawn message for initial crates in missions
 * Fix last 2 characters in demo chat being missing
 * King Mode: Fix team sometimes not being killed properly if king drowned
 * King Mode: Kill resurrected minions if king is not alive
 * Fix poison damage not working in first round
 * Hide most HUD elements in cinematic mode
 * Don't show "F1", "F2", etc. in ammo menu if these aren't the actual slot keys

Lua API:
 + New call: SaveMissionVar(varname, value): Save value to mission variable (variable for non-campaign mission)
 + New call: GetMissionVar(varname): Get value of mission variable
 + New call: SetTurnTimePaused(isPaused): Call with true to pause turn time, false to unpause
 + New call: GetTurnTimePaused(): Returns true if turn time is paused due to Lua
 + New callback: onGameResult(winningClan): Called when the game ends normally. winningClan = index of winning clan or -1 on draw
 + Params explode, poison in the SpawnFake*Crate functions now optional and default to false

====================== 0.9.25 ======================
HIGHLIGHTS:
 + Complete overhaul of Continental supplies
 + Can adjust weapon start and crate probabilities in Balanced Random Weapon
 + Remove rubber duck
 + New air mine features
 + Rework team rankings
 + Tied teams now rank equally
 + Help button in main menu
 + 19 new hedgehog taunts
 + Many new Lua API features
 * Functionality of controllers restored