@@ -3,6 +3,7 @@
 ============== 1.0.0-dev (unreleased) ==============
  + Hand-drawn maps can now be scaled with slider
  + Show check mark for completed scenarios, challenges and trainings
+ + Track high scores in singleplayer challenges
  + New chat command: “/help room” (shows room chat commands within the game)
  + Colorize switching arrows, pointing arrow and target cross in clan color
  + Longer delays between turns so its easier to see damage and messages
@@ -22,6 +23,7 @@ Lua API:
  + New call: GetMissionVar(varname): Get value of mission variable
  + New call: SetTurnTimePaused(isPaused): Call with true to pause turn time, false to unpause
  + New call: GetTurnTimePaused(): Returns true if turn time is paused due to Lua
+ + Utils library: New calls: getReadableChallengeRecord, updateChallengeRecord
  + New callback: onGameResult(winningClan): Called when the game ends normally. winningClan = index of winning clan or -1 on draw
  + Params explode, poison in the SpawnFake*Crate functions now optional and default to false
 
